<resources>
    <string name="app_name">SafeAir_kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="safeair">SafeAir</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lng">Lng :</string>
    <string name="lat">Lat :</string>
    <string name="phone">Phone</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_phone">Login with phone</string>
    <string name="otp">OTP</string>
    <string name="unlock">Unlock</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
</resources>